--- a/app/locale/ru_RU/Mage_Catalog.csv
+++ b/app/locale/ru_RU/Mage_Catalog.csv
@@ -685,7 +685,7 @@
 "Share on Twitter","Поделиться в Twitter"
 "Shop By","Фильтр"
 "Shopping Options","Доступные параметры"
-"Show","Показать"
+"Show","Показывать по:"
 "Show Details","Показать подробно"
 "Show Tags","Показать метки"
 "Simple Product","Простой товар"
@@ -702,7 +702,7 @@
 "Some of the processed products have no SKU value defined. Please fill it prior to performing operations on these products.","У некоторых обработанных товаров не указаны значения артикула (SKU). Заполните их перед выполнением операций с этими товарами."
 "Some of the products below do not have all the required options. Please edit them and configure all the required options.","У некоторых товаров, указанных ниже, указаны не все обязательные параметры. Отредактируйте их и укажите все обязательные параметры."
 "Some of the selected item options are not currently available.","Некоторые из выбранных параметров позиции в данный момент недоступны."
-"Sort By","Тип сортировки"
+"Sort By","Сортировать по:"
 "Sort Order","Порядок сортировки"
 "Source Model","Модель-источник"
 "Special Expires On: %s","Особое предложение истекает: %s"
