--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -746,6 +746,7 @@
 "To see product price, add this item to your cart. You can always remove it later.","To see product price, add this item to your cart. You can always remove it later."
 "Top/Left","Top/Left"
 "Top/Right","Top/Right"
+"Total num", "Total num"
 "Total Qty Base Items","Total Qty Base Items"
 "Total Qty Content Items","Total Qty Content Items"
 "Total incl. Tax: %1$s","Total incl. Tax: %1$s"
