--- a/app/locale/ru_RU/Mage_Catalog.csv
+++ b/app/locale/ru_RU/Mage_Catalog.csv
@@ -787,6 +787,7 @@
 "To see product price, add this item to your cart. You can always remove it later.","Чтобы узнать цену, поместите товар в корзину. Вы в любой момент сможете удалить его из корзины."
 "Top/Left","Верх/лево"
 "Top/Right","Верх/право"
+"Total num", "Всего товаров"
 "Total Qty Base Items","Всего кол-во"
 "Total Qty Content Items","Всего кол-во позиций содержимого"
 "Total incl. Tax: %1$s","Итого вкл. налог: %1$s"
